fix back button on mobile view

--- a/assets/scss/mobile.scss
+++ b/assets/scss/mobile.scss
@@ -403,14 +403,31 @@
     margin-top: 18px;
   }
   h4 {
-    font-size: 1.05rem;
+    font-size: 1.075rem;
   }
   .breadcrumbs {
+    padding-bottom: 0.2rem;
+    margin-top: 0.35rem;
+    height: 49px;
+    position: relative;
+    border: none;
     a {
-      padding: 0.42rem 0;
+      padding: 0.42rem 0 0.62rem 0;
+      gap: 0.75rem;
+      width: 119%;
+      position: absolute;
+      top: 0;
+      left: -1.75rem;
+      padding-left: 1.75rem;
+      border-bottom: 1px solid rgba(242, 233, 221, .8);
+      opacity: 1 !important;
       p {
-        font-size: 18px !important;
+        font-size: 16px !important;
       }
+    }
+    .icon.icon-arrow-back {
+      background-size: 14px;
+      background-position: left center;
     }
   }
 }
